[package]
name = "vm-migrate"
version = "0.1.0"
description = "VictoriaMetrics adhoc migration tool"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
clap = "4.5.21"
easy-logging = "1"
futures-core = "0.3.31"
futures-util = "0.3.31"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["stream"] }
serde = "1.0.215"
serde_derive = "1.0.215"
serde_json = "1.0.133"
tabled = "0.17.0"
tokio = { version = "1", features = ["macros", "rt"] }
tokio-util = "0.7.12"
url = "2.5.4"
